package coinffeine.protocol;

option java_package = "coinffeine.protocol.protobuf";
option java_outer_classname = "CoinffeineProtobuf";
option java_generic_services = true;

message DecimalNumber {
    required int32 scale = 1;
    required bytes value = 2;
}

message FiatAmount {
    required DecimalNumber amount = 1;
    required string currency = 2;
}

message Price {
    required string currency = 1;
    optional DecimalNumber limit = 2;
}

message Market {
    required string currency = 1;
}

message PeerId {
    required string value = 1;
}

message OrderId {
    required string value = 1;
}

message ExchangeId {
    required string value = 1;
}

message OrderBookEntry {
    enum OrderType {
        BID = 0;
        ASK = 1;
    }
    required OrderId id = 1;
    required OrderType orderType = 2;
    required DecimalNumber amount = 3;
    optional Price price = 4;
}

message PeerPositions {
    required string nonce = 1;
    required Market market = 2;
    repeated OrderBookEntry entries = 3;
}

message PeerPositionsReceived {
    required string nonce = 1;
}

message QuoteRequest {
    required Market market = 1;
}

message Quote {
    required Market market = 1;
    optional DecimalNumber highestBid = 2;
    optional DecimalNumber lowestAsk = 3;
    optional DecimalNumber lastPrice = 4;
}

message OrderMatch {
    required OrderId orderId = 1;
    required ExchangeId exchangeId = 2;
    required string currency = 3;
    required DecimalNumber buyerBitcoinAmount = 4;
    required DecimalNumber sellerBitcoinAmount = 5;
    required DecimalNumber buyerFiatAmount = 6;
    required DecimalNumber sellerFiatAmount = 7;
    required int64 lockTime = 8;
    required PeerId counterpart = 9;
}

message OpenOrdersRequest {
    required Market market = 1;
}

message OpenOrders {
    required PeerPositions orders = 1;
}

message ExchangeRejection {
    enum Cause {
        COUNTERPART_TIMEOUT = 0;
        UNAVAILABLE_FUNDS = 1;
        INVALID_ORDER_MATCH = 2;
    }
    required ExchangeId exchangeId = 1;
    required Cause cause = 2;
}

message ExchangeAborted {
    enum Cause {
        REJECTED = 0;
        PUBLICATION_FAILURE = 1;
        INVALID_COMMITMENTS = 2;
        TIMEOUT = 3;
    }
    required ExchangeId exchangeId = 1;
    required Cause cause = 2;
    optional ExchangeRejection.Cause rejectionCause = 3;
    optional bytes txId = 4;
    repeated PeerId culprits = 5;
}

message PeerHandshake {
    required ExchangeId exchangeId = 1;
    required bytes publicKey = 2;
    required string paymentProcessorAccount = 3;
}

message RefundSignatureRequest {
    required ExchangeId exchangeId = 1;
    required bytes refundTx = 2;
}

message RefundSignatureResponse {
    required ExchangeId exchangeId = 1;
    required bytes transactionSignature = 2;
}

// Sent by the parts to enter an exchange with a deposit commitment
message ExchangeCommitment {
    required ExchangeId exchangeId = 1;
    required bytes publicKey = 2;
    required bytes commitmentTransaction = 3;
}

// Notification to the exchange parts of the actual commitments
message CommitmentNotification {
    required ExchangeId exchangeId = 1;
    required bytes buyerTxId = 2;
    required bytes sellerTxId = 3;
}

// Confirmation make by an exchange part of having received the commitment notification
message CommitmentNotificationAck {
    required ExchangeId exchangeId = 1;
}

message StepSignature {
    required ExchangeId exchangeId = 1;
    required int32 step = 2;
    required bytes buyerDepositSignature = 3;
    required bytes sellerDepositSignature = 4;
}

message PaymentProof {
    required ExchangeId exchangeId = 1;
    required int32 step = 2;
    required string paymentId = 3;
}

message MicropaymentChannelClosed {
    required ExchangeId exchangeId = 1;
}

message ProtocolVersion {
    required int32 major = 1;
    required int32 minor = 2;
}

message Payload {
    required ProtocolVersion version = 1;
    optional CommitmentNotification commitmentNotification = 2;
    optional CommitmentNotificationAck commitmentNotificationAck = 3;
    optional ExchangeAborted exchangeAborted = 4;
    optional ExchangeCommitment exchangeCommitment = 5;
    optional ExchangeRejection exchangeRejection = 6;
    optional MicropaymentChannelClosed micropaymentChannelClosed = 7;
    optional OpenOrders openOrders = 8;
    optional OpenOrdersRequest openOrderRequest = 9;
    optional OrderMatch orderMatch = 10;
    optional PaymentProof paymentProof = 11;
    optional PeerHandshake peerHandshake = 12;
    optional PeerPositions peerPositions = 13;
    optional PeerPositionsReceived peerPositionsReceived = 14;
    optional Quote quote = 15;
    optional QuoteRequest quoteRequest = 16;
    optional RefundSignatureRequest refundSignatureRequest = 17;
    optional RefundSignatureResponse refundSignatureResponse = 18;
    optional StepSignature stepSignature = 19;
}

message ProtocolMismatch {
    required ProtocolVersion supportedVersion = 1;
}

message CoinffeineMessage {
    enum MessageType {
        PAYLOAD = 0;
        PROTOCOL_MISMATCH = 1;
    }
    required MessageType type = 1;
    optional Payload payload = 2;
    optional ProtocolMismatch protocolMismatch = 3;
}
